data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1458.wast
;; 9. **Test Description**: Design a test that runs multiple operations, including a function that should break out of a `block` using `br_if`. Ensure there's an index misinterpretation to trigger either an `OobLabel` error or stack mismanagement in the `wizard_engine`.   - **Constraint Being Checked**: Accurate label index interpretation and stack adherence.   - **Stack Corruption Aspect**: Inaccurate label targeting leading to unplanned stack conditions, leaving residual or missing values affecting subsequent operations.

(assert_invalid
  (module
    (func $misinterpret_index 
      (block 
        (i32.const 1)
        (block (result i32) 
          (i32.const 0) 
          (br_if 2)  ;; Incorrect index resulting in out-of-bounds error
          (i32.const 1)
        )
        (i32.eqz) 
        (drop)
      )
    )
  )
  "unknown label"
)